--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -14,6 +14,7 @@ sources = [
     "ResultSet.cpp",
     "Source.cpp",
     "SplitPath.cpp",
+    "expr/AttrReplace.cpp",
     "expr/Compiler.cpp",
     "expr/Expression.cpp",
     "expr/Factory.cpp",
