--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -19,6 +19,7 @@ sources = [
     "expr/Expression.cpp",
     "expr/Factory.cpp",
     "expr/FromClause.cpp",
+    "expr/Join.cpp",
     "expr/Select.cpp",
     "expr/Selectable.cpp",
     "expr/Visitor.cpp"
