refactored Database to an ABC
* relational database access is done through RelationalDatabase.
* Query stores requested attributes and filter conditions, transforming
  these to actual queries is now the responsibility of Database
  implementation.

--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -7,10 +7,10 @@ sources = [
     "AttributeMapper.cpp",
     "Converter.cpp",
     "DataObject.cpp",
-    "Database.cpp",
     "FileCatalog.cpp",
     "File.cpp",
     "Query.cpp",
+    "RelationalDatabase.cpp",
     "ResultSet.cpp",
     "Source.cpp",
     "SplitPath.cpp",
