--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -11,6 +11,7 @@ sources = [
     "File.cpp",
     "Query.cpp",
     "RelationalDatabase.cpp",
+    "RelationalResultSet.cpp",
     "ResultSet.cpp",
     "Source.cpp",
     "SplitPath.cpp",
