split AttributeSpecs from AttributeMapper
remove AttributeMapper from Query and Database
replace AttributeMapper with AttributeSpecs in File and FileCatalog

mapping attributes to tables solely concerns the RelationalDatabase,
attribute validity and type are needed at file load time.

--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -5,6 +5,7 @@ sources = [
     "hlhdf.cpp",
     "Attribute.cpp",
     "AttributeMapper.cpp",
+    "AttributeSpecs.cpp",
     "Converter.cpp",
     "DataObject.cpp",
     "FileCatalog.cpp",
