add dependency checking to build scripts
 * autoconf like checks for dependencies
 * library is now build with alias 'shared-library'
 * java wrappers are now build with alias 'java-wrapper'

--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -29,7 +29,7 @@ sources = [
 
 lib = env.SharedLibrary("#lib/brfc", sources, LIBS=["hdf5", "hlhdf", "QtSql"])
 
-env.Default(lib)
+env.Alias("shared-library", lib)
 
 env.Install("${install_root}/lib", lib)
 
