fix: add Variant.cpp to build script sources

--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -16,6 +16,7 @@ sources = [
     "ResultSet.cpp",
     "Source.cpp",
     "SplitPath.cpp",
+    "Variant.cpp",
     "expr/AttrReplace.cpp",
     "expr/Compiler.cpp",
     "expr/Expression.cpp",
