--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -17,6 +17,7 @@ sources = [
     "Source.cpp",
     "SplitPath.cpp",
     "TestRDB.cpp",
+    "TestSwig.cpp",
     "Variant.cpp",
     "expr/AttrReplace.cpp",
     "expr/Compiler.cpp",
