--- a/swig/SConscript
+++ b/swig/SConscript
@@ -4,21 +4,9 @@ env.AppendUnique(CPPPATH=["${jdk_include_dir}", "${jdk_include_dir}/linux"])
 
 sources = ["FileCatalog.i"]
 
+Execute(Delete(env.Dir(".").Dir("eu")))
+Execute(Mkdir(env.Dir(".").Dir("eu/baltrad/fc")))
 build_dir = env.Dir(".").get_abspath()
-
-env["SWIGEXTRA"]["FileCatalog.i"] = [
-    "eu/baltrad/fc/Attribute.java",
-    "eu/baltrad/fc/ExpressionFactory.java",
-    "eu/baltrad/fc/Literal.java",
-    "eu/baltrad/fc/ResultSet.java",
-    "eu/baltrad/fc/BinaryOperator.java",
-    "eu/baltrad/fc/Expression.java",
-    "eu/baltrad/fc/FileCatalog.java",
-    "eu/baltrad/fc/Parentheses.java",
-    "eu/baltrad/fc/Element.java",
-    "eu/baltrad/fc/Label.java",
-    "eu/baltrad/fc/Query.java"
-]
 
 env["JARCHDIR"] = build_dir + "/classes"
 env["JAVASOURCEPATH"] = build_dir
@@ -27,7 +15,11 @@ env.Append(SWIGFLAGS="-c++ -java -package eu.baltrad.fc".split())
 env.Append(SWIGOUTDIR=build_dir + "/eu/baltrad/fc")
 env.Append(SWIGPATH=env["CPPPATH"])
 
+env.AlwaysBuild("FileCatalog_wrap.cc")
+
 lib = env.SharedLibrary("#lib/brfc_java", sources, LIBS=["brfc"])
+
+env.Clean(lib, Dir(".").Dir("eu"))
 
 java = env.Java(target="classes", source=["eu", "java"])
 jar = env.Jar(target="#lib/jbrfc.jar", source=["classes/eu"])
