move FileNamer and DefaultFileNamer to their own files

--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -8,6 +8,7 @@ sources = [
     "AttributeSpecs.cpp",
     "Converter.cpp",
     "DataObject.cpp",
+    "DefaultFileNamer.cpp",
     "FileCatalog.cpp",
     "File.cpp",
     "Query.cpp",
