--- a/test/config.cpp.in
+++ b/test/config.cpp.in
@@ -2,11 +2,11 @@
 
 namespace brfc {
 
-const char* test_schema_dir = %(test_schema_dir)s;
+const char* test_schema_dir = %test_schema_dir%;
 
 #if BRFC_TEST_DSN_COUNT >= 1
-const char* test_dsns[%(test_dsn_count)d] = {
-    %(test_dsns)s
+const char* test_dsns[%test_dsn_count%] = {
+    %test_dsns%
 };
 #else
 const char* test_dsns[1] = {""};
