--- a/test/config.hpp.in
+++ b/test/config.hpp.in
@@ -5,11 +5,11 @@
 
 namespace brfc {
 
-#define BRFC_TEST_DSN_COUNT %(test_dsn_count)d
+#define BRFC_TEST_DSN_COUNT %test_dsn_count%
 
 extern const char* test_schema_dir;
 #if BRFC_TEST_DSN_COUNT >= 1
-extern const char* test_dsns[%(test_dsn_count)d];
+extern const char* test_dsns[%test_dsn_count%];
 #else
 extern const char* test_dsns[1];
 #endif // BRFC_TEST_DSN_COUNT
