--- a/test/SConscript
+++ b/test/SConscript
@@ -27,4 +27,8 @@ env.Append(CCFLAGS=["-g"])
 
 runner = env.Program("#test/runner", sources,
             LIBS=["gtest", "gmock", "brfc", "hlhdf"])
+
+confdeps = env.ConfHas("#gtest-confdeps", ["gtest", "gmock", "hlhdf"])
+
+env.Requires(runner, confdeps)
 # vim:filetype=python:et:ts=4:sw=4:
