modify oh5::Node hierarchy

--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -31,7 +31,7 @@ sources = [
     "expr/Visitor.cpp",
     "oh5/Attribute.cpp",
     "oh5/AttributeGroup.cpp",
-    "oh5/DataObject.cpp",
+    "oh5/Group.cpp",
     "oh5/Node.cpp",
 ]
 
