use oh5 for hdf5 node hierarchy

--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -3,20 +3,16 @@ Import("env")
 sources = [
     "exceptions.cpp",
     "hlhdf.cpp",
-    "Attribute.cpp",
     "AttributeMapper.cpp",
     "AttributeSpecs.cpp",
     "Converter.cpp",
-    "DataObject.cpp",
     "DefaultFileNamer.cpp",
     "FileCatalog.cpp",
-    "File.cpp",
     "Query.cpp",
     "RelationalDatabase.cpp",
     "RelationalResultSet.cpp",
     "ResultSet.cpp",
     "Source.cpp",
-    "SplitPath.cpp",
     "TestRDB.cpp",
     "TestSwig.cpp",
     "Variant.cpp",
@@ -32,7 +28,10 @@ sources = [
     "oh5/Attribute.cpp",
     "oh5/AttributeGroup.cpp",
     "oh5/Group.cpp",
+    "oh5/File.cpp",
+    "oh5/FileLoader.cpp",
     "oh5/Node.cpp",
+    "oh5/Root.cpp",
 ]
 
 confdeps = env.ConfHas("#shared-library-confdeps",
