--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -30,6 +30,7 @@ sources = [
     "oh5/Node.cpp",
     "oh5/Root.cpp",
     "oh5/Source.cpp",
+    "test/TempDir.cpp",
     "test/TempH5File.cpp",
     "test/TestRDB.cpp",
     "test/TestSwig.cpp",
