--- a/test/java/build.xml
+++ b/test/java/build.xml
@@ -13,8 +13,11 @@
   <target name="execute_tests" depends="create_postgresql_testdb">
     <mkdir dir="test/reports"/>
     <junit showoutput="true" printsummary="no">
+      <sysproperty key="db.test_db_dsn" value="${db.test_db_dsn}"/>
+      <sysproperty key="db.test_db_schema_dir" value="${db.test_db_schema_dir}"/>
       <formatter type="xml" />
       <test name="eu.baltrad.fc.TestQString" todir="test/reports" />
+      <test name="eu.baltrad.fc.TestFileCatalog" todir="test/reports" />
     </junit>
   </target>
 </project>
