add Data, DataSet and Quality nodes to oh5

--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -27,6 +27,9 @@ sources = [
     "oh5/Group.cpp",
     "oh5/File.cpp",
     "oh5/FileLoader.cpp",
+    "oh5/Data.cpp",
+    "oh5/DataSet.cpp",
+    "oh5/Quality.cpp",
     "oh5/Node.cpp",
     "oh5/Root.cpp",
     "oh5/Source.cpp",
