--- a/test/java/build.xml
+++ b/test/java/build.xml
@@ -17,6 +17,8 @@
       <sysproperty key="db.test_db_schema_dir" value="${db.test_db_schema_dir}"/>
       <formatter type="xml" />
       <test name="eu.baltrad.fc.TestQString" todir="test/reports" />
+      <test name="eu.baltrad.fc.TestDate" todir="test/reports" />
+      <test name="eu.baltrad.fc.TestTime" todir="test/reports" />
       <test name="eu.baltrad.fc.TestFileCatalog" todir="test/reports" />
     </junit>
   </target>
