--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -27,11 +27,11 @@ sources = [
     "oh5/Group.cpp",
     "oh5/File.cpp",
     "oh5/FileLoader.cpp",
-    "oh5/Data.cpp",
-    "oh5/DataSet.cpp",
-    "oh5/Quality.cpp",
+    "oh5/DataGroup.cpp",
+    "oh5/DataSetGroup.cpp",
+    "oh5/QualityGroup.cpp",
     "oh5/Node.cpp",
-    "oh5/Root.cpp",
+    "oh5/RootGroup.cpp",
     "oh5/Source.cpp",
     "oh5/SplitPath.cpp",
     "oh5/SourceCentre.cpp",
