--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -27,7 +27,6 @@ sources = [
     "ResultSet.cpp",
     "SHA1AttributeHasher.cpp",
     "Variant.cpp",
-    "expr/AttrReplace.cpp",
     "expr/Compiler.cpp",
     "expr/Expression.cpp",
     "expr/Factory.cpp",
@@ -54,6 +53,7 @@ sources = [
     "oh5/SourceCentre.cpp",
     "oh5/SourceRadar.cpp",
     "rdb/AttributeMapper.cpp",
+    "rdb/AttrReplace.cpp",
     "rdb/RelationalDatabase.cpp",
     "rdb/RelationalResultSet.cpp",
     "test/TempDir.cpp",
