--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -29,10 +29,6 @@ sources = [
     "Variant.cpp",
     "expr/Expression.cpp",
     "expr/Factory.cpp",
-    "expr/FromClause.cpp",
-    "expr/Join.cpp",
-    "expr/Select.cpp",
-    "expr/Selectable.cpp",
     "oh5/hlhdf.cpp",
     "oh5/Attribute.cpp",
     "oh5/AttributeGroup.cpp",
@@ -54,8 +50,12 @@ sources = [
     "rdb/AttributeMapper.cpp",
     "rdb/AttrReplace.cpp",
     "rdb/Compiler.cpp",
+    "rdb/FromClause.cpp",
+    "rdb/Join.cpp",
     "rdb/RelationalDatabase.cpp",
     "rdb/RelationalResultSet.cpp",
+    "rdb/Select.cpp",
+    "rdb/Selectable.cpp",
     "test/TempDir.cpp",
     "test/TempH5File.cpp",
     "test/TestRDB.cpp",
