--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -48,10 +48,10 @@ sources = [
     "oh5/SourceCentre.cpp",
     "oh5/SourceRadar.cpp",
     "rdb/AttributeMapper.cpp",
-    "rdb/AttrReplace.cpp",
     "rdb/Compiler.cpp",
     "rdb/FromClause.cpp",
     "rdb/Join.cpp",
+    "rdb/QueryToSelect.cpp",
     "rdb/RelationalDatabase.cpp",
     "rdb/RelationalResultSet.cpp",
     "rdb/Select.cpp",
