--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -48,6 +48,7 @@ sources = [
     "oh5/SourceCentre.cpp",
     "oh5/SourceRadar.cpp",
     "rdb/AttributeMapper.cpp",
+    "rdb/BindMap.cpp",
     "rdb/Compiler.cpp",
     "rdb/FromClause.cpp",
     "rdb/Join.cpp",
