--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -51,6 +51,7 @@ sources = [
     "rdb/BindMap.cpp",
     "rdb/Compiler.cpp",
     "rdb/FromClause.cpp",
+    "rdb/GroupIdCache.cpp",
     "rdb/Join.cpp",
     "rdb/QueryToSelect.cpp",
     "rdb/RelationalDatabase.cpp",
