move oh5::File structure saving to rdb::Save*

--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -52,6 +52,9 @@ sources = [
     "rdb/Compiler.cpp",
     "rdb/FromClause.cpp",
     "rdb/GroupIdCache.cpp",
+    "rdb/SaveAttribute.cpp",
+    "rdb/SaveGroup.cpp",
+    "rdb/SaveFile.cpp",
     "rdb/Join.cpp",
     "rdb/QueryToSelect.cpp",
     "rdb/RelationalDatabase.cpp",
