--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -61,7 +61,6 @@ sources = [
     "rdb/PostgresResultSet.cpp",
     "rdb/QueryToSelect.cpp",
     "rdb/RelationalDatabase.cpp",
-    "rdb/RelationalResultSet.cpp",
     "rdb/Select.cpp",
     "rdb/Selectable.cpp",
     "test/TempDir.cpp",
@@ -71,7 +70,7 @@ sources = [
 ]
 
 confdeps = env.ConfHas("#shared-library-confdeps",
-                       ["qt", "qtsql", "hlhdf", "boost"])
+                       ["qt", "hlhdf", "boost"])
 
 objects = env.SharedObject(sources)
 env.Requires(objects, confdeps)
