use DateTimeParser to convert Date/Time to/from String

--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -21,6 +21,7 @@ sources = [
     "exceptions.cpp",
     "smart_ptr.cpp",
     "Date.cpp",
+    "DateTimeParser.cpp",
     "DefaultFileNamer.cpp",
     "FileCatalog.cpp",
     "FileNamer.cpp",
