remove references to Qt from build system

--- a/src/brfc/SConscript
+++ b/src/brfc/SConscript
@@ -79,12 +79,12 @@ sources = [
 ]
 
 confdeps = env.ConfHas("#shared-library-confdeps",
-                       ["qt", "hlhdf", "boost"])
+                       ["hlhdf", "boost"])
 
 objects = env.SharedObject(sources)
 env.Requires(objects, confdeps)
 
-lib = env.SharedLibrary("#lib/brfc", objects, LIBS=["hdf5", "hlhdf", "QtCore", "icuuc", "icutu", "pqxx", "boost_system", "boost_filesystem"])
+lib = env.SharedLibrary("#lib/brfc", objects, LIBS=["hdf5", "hlhdf", "icuuc", "icutu", "pqxx", "boost_system", "boost_filesystem"])
 
 env.Alias("shared-library", lib)
 
